DD-406: Adapt EwdsOrderDto to new ontology
